# DetectorSim

./: .gitignore  CMakeLists.txt  DetSim.cpp
ROOT/: CCE.cpp  Groove_Canvas.root  SiLi.cpp  SiLi.hh  SiLi3D.root  SiLi3D_loop.root  SiLi_3D  SiLi_3D.root  SiLi_loop.cpp  Surface_Canvas.root  Under_Canvas.root  field_plot.cpp  neff_plot.cpp  plot.cpp  pot_plot.cpp
include/: DetectorConstruction.hh  DetectorEventAction.hh  DetectorHit.hh  DetectorMessenger.hh  DetectorPhysicsList.hh  DetectorPrimaryGeneratorAction.hh  DetectorRunAction.hh  DetectorSD.hh  LabDetectorAnalysis.hh  LabDetectorConstruction.hh  LabDetectorHit.hh  LabDetectorMessenger.hh  LabPrimaryGeneratorAction.hh  global.h
macro/: ogl.g4mac  ray.g4mac  sim.g4mac  test.g4mac
src/: ConstructAlSquare.cc  ConstructAlSquare.cpp  ConstructChamber.cc  ConstructChamber.cpp  ConstructColdPlate.cc  ConstructColdPlate.cpp  ConstructCoolingMount.cc  ConstructCoolingMount.cpp  ConstructFaraday.cc  ConstructFaraday.cpp  ConstructMount.cc  ConstructMount.cpp  ConstructPreAmp.cc  ConstructPreAmp.cpp  ConstructScrews.cc  ConstructScrews.cpp  ConstructSiLi.cc  ConstructSiLi.cpp  DetectorConstruction.cpp  DetectorEventAction.cpp  DetectorHit.cpp  DetectorMessenger.cpp  DetectorPhysicsList.cpp  DetectorPrimaryGeneratorAction.cpp  DetectorRunAction.cpp  DetectorSD.cpp  LabDetectorConstruction.cc  LabDetectorHit.cc  LabDetectorMessenger.cc  LabDetectorSD.cc  LabPhysicsList.cc  LabPrimaryGeneratorAction.cc  LabRunAction.cc
